Add collaborator actions / LIFX bulb feedback

--- a/elements.html
+++ b/elements.html
@@ -56,6 +56,7 @@
 <!-- Elements from customelements.io-->
 <link rel="import" href="bower_components/file-tree/file-tree.html">
 <link rel="import" href="bower_components/paper-swatch-picker/paper-swatch-picker.html">
+<link rel="import" href="bower_components/paper-chip/paper-chip.html">
 
 <!-- poly-elements -->
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
