Add commit history section / Fix indentation on save

--- a/styles.html
+++ b/styles.html
@@ -553,6 +553,54 @@
     display: none;
   }
 
+  #get_commits_dialog{
+    width: 700px;
+    height: 500px;
+  }
+  #commits_toolbar{
+    padding: 0;
+  }
+  #commits_header_panel{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  #commits_header_panel paper-toolbar{
+    background-color: white;
+    color: black;
+    padding: 0px;
+  }
+  #commits_header_panel h2{
+    padding-left: 12px;
+  }
+  #loading_commits_spinner{
+    padding-right: 12px;
+  }
+  #commits_view_more{
+    color: var(--polytipe-accent-color);
+  }
+  .commit_box{
+    padding: 10px 20px;
+  }
+  .commit_box:hover{
+    background-color: #eee;
+  }
+  .commit_avatar{
+    --iron-image-width: 48px;
+    --iron-image-height: 48px;
+    margin-right: 8px;
+    border-radius: 50%;
+  }
+  .commit_author{
+    color: #555;
+  }
+  .commit_date{
+    margin-left: 5px;
+    color: #888;
+    font-weight: 400;
+  }
+
   .modal_dialog{
     width: 300px;
   }
