--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="github.js"></script>
   <script src="github.bundle.min.js"></script>
+  <script src="vkbeautify.js"></script>
 
   <link rel="import" href="elements.html">
   <link rel="import" href="styles.html">
@@ -60,13 +61,13 @@
     <paper-drawer-panel disable-swipe force-narrow drawer-width="290px" drawer-toggle-attribute="paper-drawer-left">
       <paper-header-panel drawer mode="seamed">
         <div id="drawer_toolbar" class="sidebar_polytipe_toolbar layout horizontal center-center">
-            <iron-image id="avatar" alt="{{user}}" src="{{avatar}}" class="layout horizontal center-center"></iron-image>
+            <iron-image id="avatar" alt="{{user}}" src="{{avatar}}"></iron-image>
             <div id="toolbar_text">
               <div id="toolbar_name">{{name}}</div>
               <div class="paper-font-subhead">{{user}}</div>
             </div>
         </div>
-        <paper-menu selected="0">
+        <paper-menu id="left_drawer_menu">
           <paper-item>
             <iron-icon class="left_toolbar_icon element_icon" icon="description"></iron-icon>
             <div>Proyectos</div>
@@ -211,7 +212,7 @@
               <span class="flex"></span>
               <template is="dom-if" if="{{unsaved_changes}}">
                 <div class="layout horizontal center">
-                  <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Guardar cambios</paper-button>
+                  <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Tienes cambios sin guardar</paper-button>
                   <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue hace {{last_saved}}</paper-tooltip>
                 </div>
               </template>
@@ -222,9 +223,9 @@
                     <iron-icon class="element_icon" icon="create"></iron-icon>
                     <div>Cambiar nombre</div>
                   </paper-item>
-                  <paper-item onclick="">
+                  <paper-item onclick="promptGetCommits()">
                     <iron-icon class="element_icon" icon="history"></iron-icon>
-                    <div>Ver historial de commits</div>
+                    <div>Ver commits recientes</div>
                   </paper-item>
                   <paper-item onclick="promptDeleteProject()">
                     <iron-icon class="element_icon delete_icon" icon="delete"></iron-icon>
@@ -346,7 +347,7 @@
                   <span class="flex"></span>
                   <template is="dom-if" if="{{unsaved_changes}}">
                     <div class="layout horizontal center">
-                      <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Guardar cambios</paper-button>
+                      <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Tienes cambios sin guardar</paper-button>
                       <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue hace {{last_saved}}</paper-tooltip>
                     </div>
                   </template>
@@ -356,6 +357,10 @@
                       <paper-item onclick="">
                         <iron-icon class="element_icon" icon="create"></iron-icon>
                         <div>Cambiar nombre</div>
+                      </paper-item>
+                      <paper-item onclick="promptGetCommits()">
+                        <iron-icon class="element_icon" icon="history"></iron-icon>
+                        <div>Ver commits recientes</div>
                       </paper-item>
                       <paper-item onclick="promptDeleteScreen()">
                         <iron-icon class="element_icon delete_icon" icon="delete"></iron-icon>
@@ -378,6 +383,7 @@
       id="firebaseAuth"
       location="https://polytipe.firebaseio.com"
       provider="github"
+      redirect
       user="{{signed_user}}"
       params='{"scope": "public_repo, delete_repo"}'
       status-known="{{statusKnown}}">
@@ -402,7 +408,7 @@
     </iron-ajax>
 
     <iron-ajax
-        id="collaborators__ajax"
+        id="collaborators_ajax"
         auto
         url="https://api.github.com/repos/{{user}}/polytipe-projects/collaborators/{{user_to_add_delete}}"
         content-type="application/json"
@@ -448,7 +454,6 @@
           <h2 class="flex">Colaboradores</h2>
           <paper-spinner id="collaborators_spinner"></paper-spinner>
         </div>
-
         <paper-input id="collaborators_input" label="Agregar usuario" value="{{user_search}}" autofocus>
           <paper-menu-button id="collaborators_dropdown" suffix horizontal-align="right" vertical-offset="-10">
             <paper-icon-button class="dropdown-trigger" onclick="searchUsers()" icon="search"></paper-icon-button>
@@ -514,6 +519,35 @@
         </div>
       </paper-dialog>
 
+      <paper-dialog id="get_commits_dialog" with-backdrop entry-animation="slide-from-bottom-animation" exit-animation="fade-out-animation">
+        <paper-header-panel mode="waterfall" id="commits_header_panel">
+          <paper-toolbar class="paper-header">
+            <h2 class="flex">Commits recientes</h2>
+            <template is="dom-if" if="{{loading_commits}}">
+              <paper-spinner active id="loading_commits_spinner"></paper-spinner>
+            </template>
+            <a class="link" target="_blank" href="https://www.github.com/{{user}}/polytipe-projects/commits/{{selected_project}}">
+              <paper-button noink id="commits_view_more" class="paper-font-button">Ver todos</paper-button>
+            </a>
+          </paper-toolbar>
+          <template is="dom-repeat" items="{{commits}}" as="commit">
+            <a href="{{commit.url}}" target="_blank" class="link">
+              <paper-item class="commit_box layout horizontal">
+                <iron-image class="commit_avatar" src="{{commit.avatar}}"></iron-image>
+                <div class="layout vertical">
+                  <div class="paper-font-subhead">{{commit.message}}</div>
+                  <div class="layout horizontal paper-font-menu">
+                    <div class="commit_author">{{commit.author}}</div>
+                    <div class="commit_date">{{commit.date}}</div>
+                  </div>
+                </div>
+              </paper-item>
+            </a>
+          </template>
+          <div id="commits_container_footer"></div>
+        </paper-header-panel>
+      </paper-dialog>
+
       <!-- Screen editor dialogs -->
       <paper-dialog id="delete_screen_dialog" class="modal_dialog" with-backdrop entry-animation="slide-from-bottom-animation" exit-animation="fade-out-animation">
         <h2>Eliminar pantalla</h2>
@@ -530,13 +564,13 @@
       <!-- Shared dialogs -->
       <paper-dialog id="save_project_dialog" class="modal_dialog" with-backdrop entry-animation="slide-from-bottom-animation" exit-animation="fade-out-animation">
         <div class="layout horizontal">
-          <h2 class="flex">Guardar cambios</h2>
+          <h2 class="flex">Hacer commit</h2>
           <paper-spinner id="saving_spinner"></paper-spinner>
         </div>
         <paper-input id="save_project_input" label="Mensaje del commit" maxlength="50" char-counter value="{{commit_message}}" autofocus required error-message="Este campo no puede dejarse en blanco"></paper-input>
         <div class="buttons">
           <paper-button class="cancel_button" noink dialog-dismiss>Cancelar</paper-button>
-          <paper-button class="accept_button" onclick="saveProject()" noink autofocus>Guardar</paper-button>
+          <paper-button class="accept_button" onclick="saveProject()" noink autofocus>Commit</paper-button>
         </div>
       </paper-dialog>
     </div>
