Add copy/paste elements functionality

--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
                       <div id="element_actions" class="sidebar_list layout horizontal end-justified">
                         <paper-fab icon="arrow-upward" title="Mover arriba" class="move_button" onclick="moveElementUp()"></paper-fab>
                         <paper-fab icon="arrow-downward" title="Mover abajo" class="move_button" onclick="moveElementDown()"></paper-fab>
+                        <paper-fab icon="content-copy" title="Copiar elemento" class="move_button" onclick="copyElement()"></paper-fab>
+                        <paper-fab icon="content-paste" title="Pegar elemento" class="move_button" onclick="pasteElement()"></paper-fab>
                         <div class="flex"></div>
                         <paper-fab id="delete_button" icon="delete" title="Eliminar elemento" onclick="deleteElement(event)"></paper-fab>
                       </div>
