--- a/styles.html
+++ b/styles.html
@@ -223,6 +223,15 @@
 
   /*Screen editor*/
 
+  #iframe_loading_spinner{
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 45px;
+    height: 45px;
+  }
+
   .main_frame{
     position: relative;
     background-color: var(--polytipe-bg-color);
@@ -324,7 +333,20 @@
   #sign_in_screen{
     position: relative;
   }
-
+  #sign_in_button{
+    height: 36px;
+  }
+  #start_button_loading{
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    top: 0px;
+    bottom: 0px;
+    width: 24px;
+    height: 24px;
+    display: none;
+  }
   #sign_in_logo_small{
     width: 150px;
     height: auto;
