--- a/styles.html
+++ b/styles.html
@@ -24,6 +24,11 @@
     background-color: var(--polytipe-bg-color);
   }
 
+  #drawer_panel_wrapper{
+    transition: opacity ease-in 0.2s;
+    opacity: 0;
+  }
+
   /*Default typography styles*/
   .paper-font-display4 {@apply(--paper-font-display4);}
   .paper-font-display3 {@apply(--paper-font-display3);}
