--- a/styles.html
+++ b/styles.html
@@ -293,6 +293,10 @@
     background-color: var(--polytipe-accent-color);
     transition: right 0.4s;
   }
+  #preview_fab.preview_mode{
+    right: 36px;
+    background-color: #555;
+  }
   iron-selector[wide-layout]{
     @apply(--layout-horizontal);
     @apply(--layout-wrap);
@@ -337,6 +341,8 @@
 
   #sign_in_screen{
     position: relative;
+    height: 100vh;
+    min-height: 700px;
   }
   #sign_in_button{
     height: 36px;
@@ -356,9 +362,6 @@
     width: 150px;
     height: auto;
     color: white;
-  }
-  #sign_in_material{
-    margin-top: 150px;
   }
   #sign_in_box{
     width: 288px;
@@ -687,12 +690,6 @@
   }
 
   @media (max-width: 1500px) {
-    #sign_in_material{
-      margin-top: 100px;
-    }
-  }
-
-  @media (max-width: 1500px) {
     #app_container{
       min-height: 550px;
     }
@@ -733,12 +730,13 @@
       margin-right: 10px;
     }
     .elements_group{
-      padding: 60px;
+      padding: 40px 20px;
     }
 
-    #sign_in_material{
-      margin-top: 10px;
+    .project_box{
+      margin: 7px;
     }
+
     .sign_in_icon_container{
       height: 220px;
     }
@@ -763,9 +761,7 @@
     .right_drawer_toggle{
       display: flex;
     }
-    .elements_group{
-      padding: 40px 30px;
-    }
+
     #preview_fab{
       right: 36px;
     }
