--- a/styles.html
+++ b/styles.html
@@ -237,6 +237,10 @@
     height: 45px;
   }
 
+  #editor_toolbar{
+    transition: background-color 0.4s;
+  }
+
   .main_frame{
     position: relative;
     background-color: var(--polytipe-bg-color);
@@ -763,7 +767,12 @@
     }
 
     #preview_fab{
-      right: 36px;
+      bottom: 24px;
+      right: 24px;
+    }
+    #preview_fab.preview_mode{
+      bottom: 24px;
+      right: 24px;
     }
   }
 
