Update the tree correctly / Remove borders on preview mode

--- a/styles.html
+++ b/styles.html
@@ -163,6 +163,10 @@
     border: 2px solid yellow !important;
   }
 
+  .no_outlined_element{
+    border: none !important;
+  }
+
   .property_name{
     padding: 10px 0;
     margin-top: 8px;
